# image-rest-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
html/: preview.html
src/: cli.yml  err.rs  image_preview_request.rs  json_request.rs  main.rs  misc.rs  multipart.html  multipart_request.rs  progress.md  tests.rs  upload_url.html  url_request.rs
