[package]
name = "image_rest"
version = "0.1.0"
authors = ["vlad <vladzhukovtirko@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-web = {version="1.0.0-beta", features=["ssl"]}
actix-multipart = "0.1.1"

env_logger = "0.6"
futures = "0.1.25"
bytes = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.11.0"
image = "0.22.3"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
clap = {version="2.33.0", features = ["yaml"]}

[dev-dependencies]
once_cell = "1.2.0" # useful for creating test data with static lifetime